# sk-ons-2025-htmx

./: .dockerignore  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
anothercontent/: apps.py  forms.py  models.py  urls.py  views.py
anothercontent/migrations/: 0001_initial.py
basiccontent/: admin.py  apps.py  decorators.py  forms.py  models.py  urls.py  views.py
basiccontent/migrations/: 0001_initial.py  0002_remove_mainpost_post_type_subpost_post_type.py  0003_user_alter_content_options_alter_file_options_and_more.py  0004_alter_user_birthday_alter_user_phone_number_and_more.py  0005_alter_user_phone_number_alter_user_username_and_more.py  0006_user_is_completed.py
basiccontent/templatetags/: content_tags.py
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: base.html  post_form.html  post_list.html
config/: settings.py  storages.py  urls.py
djforms/: apps.py  form_template_fields.py  forms.py  models.py  urls.py  views.py
djforms/fields/: multiselectfield.py
djforms/migrations/: 0001_initial.py
djforms/templates/djforms/: base.html  formtemplate_form.html  formtemplate_list.html
media/files/: 업로드자료.xlsx
nginx/: nginx.conf
templates/: base.html  home.html  modal-form.html
templates/anothercontent/content/: content_form.html
templates/basiccontent/: end_template.html  generate_survey_link.html  post_content_form.html  post_content_form_row.html  post_detail.html  post_form.html  post_list.html
templates/components/: copy-button.html  modal.html
(+24 files in other folders)
