[project]
name = "basic-contents-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dj-rest-auth>=7.0.1",
    "django>=4.2.21",
    "django-allauth>=65.8.0",
    "django-bootstrap-v5>=1.0.11",
    "django-cors-headers>=4.7.0",
    "django-crispy-forms>=2.4",
    "django-environ>=0.12.0",
    "django-htmx>=1.23.0",
    "django-template-partials>=24.4",
    "django-widget-tweaks>=1.5.0",
    "gunicorn>=23.0.0",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
]
